...
      );

      if (error) throw error;

      // Success
      // Alert.alert(
      //   t('success') || 'Success',
      //   t('checkEmail') || 'Please check your email to confirm your account',
      //   [{ text: t('ok') || 'OK', onPress: () => safeNavigate(() =>onNavigate('sign-in', { email: watch('email')}) })]
      // );
      // Reset form
      reset();
    } catch (error) {
      Alert.alert(
        t('error') || 'Error',
...
