...
                      render={({ field }) => (
                        <FormItem>
                          <FormControl>
                            <Textarea
                              {...transformInputProps(field)}
                              ref={textareaRef}
                              testID="translation-text"
                              placeholder={
                                contentType === 'transcription'
                                  ? t('enterYourTranscriptionIn', {
                                      language:
                                        sourceLanguoidData?.name ||
                                        t('sourceLanguage')
...
                !canTranslate ||
                recordingState.isRecording ||
                recordingState.isPaused ||
                (translationType === 'audio' && !form.getValues('audioUri'))
              }
              onPress={() => void handleFormSubmit()}
              testID="translation-submit"
            >
              <Text className="text-base font-bold">{t('createObject')}</Text>
            </FormSubmit>
            <DrawerClose disabled={isCreatingTranslation}>
              <Text>{t('cancel')}</Text>
            </DrawerClose>
...
