...

  return (
    <>
      <Pressable
        className={className}
        key={project.id}
        testID="project-list-item"
        accessibilityLabel={project.name || 'project-list-item'}
        onPress={() => goToProjectHelper()}
      >
        <Card
          className={cn(
            className,
...
