...
          name="email"
          render={({ field }) => (
            <FormItem>
              <FormControl>
                <Input
                  {...transformInputProps(field)}
                  testID="sign-in-email"
                  mask
                  type="next"
                  autoCapitalize="none"
                  keyboardType="email-address"
                  prefix={MailIcon}
                  prefixStyling={false}
...
          name="password"
          render={({ field }) => (
            <FormItem>
              <FormControl>
                <Input
                  {...transformInputProps(field)}
                  testID="sign-in-password"
                  onSubmitEditing={handleFormSubmit}
                  returnKeyType="done"
                  autoCapitalize="none"
                  autoCorrect={false}
                  autoComplete="password"
                  prefix={LockIcon}
...
