...
  },
  sendResetEmail: {
    english: 'Send Reset Email',
    spanish: 'Enviar correo de restablecimiento'
  },
  signIn: {
    english: 'Sign In',
    spanish: 'Iniciar Sesión'
  },
  signInError: {
    english: 'Unable to sign in. Please check your credentials and try again.',
    spanish:
      'No se puede iniciar sesión. Por favor verifique sus credenciales e intente nuevamente.'
...
